added password checker

--- a/assets/css/pschecker.css
+++ b/assets/css/pschecker.css
@@ -1,7 +1,7 @@
 ﻿.strength-indicator
 {
-	width: 200px;
-	height: 120px;
+/*	width: 200px;
+	height: 120px; */
 	position: absolute;
 	left: 400px;
 	top: 2px;
@@ -16,8 +16,8 @@
 .meter
 {
 	display: block;
-	width: 160px;
-	height: 14px;
+/*	width: 160px;
+	height: 14px; */
 	background-color: Gray;
 	background: #424042; /* Old browsers */
 	background: -moz-linear-gradient(left, #424042 0%, #f2f2f2 99%); /* FF3.6+ */
@@ -76,7 +76,7 @@
 }
 .password-container
 {
-	width: 600px;
+/*	width: 600px; */
 	padding: 4px;
 	position: relative;
 }
@@ -90,14 +90,14 @@
 {
 	text-align: right;
 	display: inline-block;
-	width: 130px;
+	/*width: 130px;*/
 	color: #6E6E6E;
 	font-size:14px;
 }
 .password-container p input[type=password]
 {
-	width: 250px;
-	height: 42px;
+/*	width: 250px;
+	height: 42px;*/
 	background-color: #232A34;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
